--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^22.5.4",
+    "prisma": "^5.19.1",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.5",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
+    "typescript": "^5.5.4",
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
