--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "prisma": "^5.19.1",
     "svelte": "^4.2.18",
@@ -19,9 +20,11 @@
     "ts-node": "^10.9.2",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "dependencies": {
+    "@prisma/client": "5.19.1",
     "express": "^4.19.2"
   }
 }
